# smart-organaizer

./: README.md  main.py  pyproject.toml
src/: calendar_api.py  calendar_tools.py  config.py  date_utils.py  llm_agent.py  text_utils.py
